--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-scripts": "3.4.0",
     "web-vitals": "^1.0.1"
   },
+  "homepage": "https://jvjplus.github.io/Emoji-Cart-With-React/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
